--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6e1e3e8
-	trimbase = 
+	trim = interfaces
+	base = d1de31c
+	trimbase = 6e1e3e8
 	parent = upstream
 	previous = 3dd9aac
