--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2e0910f
-	trimbase = 
+	trim = jockeys
+	base = 1e2bb98
+	trimbase = 2e0910f
 	parent = upstream
 	previous = 3dd9aac
