--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a7a9045
-	trimbase = 
+	trim = lama_core
+	base = 01767a7
+	trimbase = a7a9045
 	parent = upstream
 	previous = 3dd9aac
