--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 183d99d
+	base = 6f36935
 	trimbase = 
 	parent = release/indigo/lama_msgs
-	previous = 
+	previous = 183d99d
