--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 49c292a
+	base = 41b4782
 	trimbase = 
 	parent = debian/indigo/lama_msgs
-	previous = 
+	previous = 49c292a
