--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 60edf5f
+	base = 7d8b1ed
 	trimbase = 
 	parent = debian/indigo/lama_core
-	previous = 
+	previous = 60edf5f
