--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aa9fd2f
+	base = 63b307a
 	trimbase = 
 	parent = debian/indigo/lama_interfaces
-	previous = 
+	previous = aa9fd2f
