--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e2bb98
+	base = 4b14c92
 	trimbase = 
 	parent = release/indigo/lama_jockeys
-	previous = 
+	previous = 1e2bb98
