--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b1f19fc
+	base = 063e8d9
 	trimbase = 
 	parent = debian/indigo/lama_jockeys
-	previous = 
+	previous = b1f19fc
