--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b7a5db
+	base = 2f4fd12
 	trimbase = 
 	parent = rpm/indigo/lama_msgs
-	previous = 
+	previous = 6b7a5db
