--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 01767a7
+	base = e25e64d
 	trimbase = 
 	parent = release/indigo/lama_core
-	previous = 
+	previous = 01767a7
