--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 023e581
+	base = 2f72145
 	trimbase = 
 	parent = rpm/indigo/lama_core
-	previous = 
+	previous = 023e581
