--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1de31c
+	base = 8b487d9
 	trimbase = 
 	parent = release/indigo/lama_interfaces
-	previous = 
+	previous = d1de31c
