--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e69335
+	base = 1264eff
 	trimbase = 
 	parent = rpm/indigo/lama_interfaces
-	previous = 
+	previous = 7e69335
