--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 51348c1
+	base = 3e97efa
 	trimbase = 
 	parent = rpm/indigo/lama_jockeys
-	previous = 
+	previous = 51348c1
