--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_msgs
-	base = e6a916c
-	trimbase = 
+	base = 72424b2
+	trimbase = e6a916c
 	parent = upstream
 	previous = 3dd9aac
