--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = 87f8176
-	trimbase = 
+	base = 9552c6a
+	trimbase = 87f8176
 	parent = upstream
 	previous = 3dd9aac
