--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = 9e069f0
-	trimbase = 
+	base = 8113b67
+	trimbase = 9e069f0
 	parent = upstream
 	previous = 3dd9aac
