--- a/tracks.yaml
+++ b/tracks.yaml
@@ -12,7 +12,7 @@ tracks:
       :{release_inc}
     devel_branch: null
     last_version: 0.1.0
-    name: lama_core
+    name: upstream
     patches: null
     release_inc: '1'
     release_repo_url: null
