--- a/lama_msgs/CMakeLists.txt
+++ b/lama_msgs/CMakeLists.txt
@@ -7,7 +7,6 @@ project(lama_msgs)
 find_package(catkin REQUIRED
   COMPONENTS
   geometry_msgs
-  lama_interfaces
   message_generation
   )
 
@@ -24,31 +23,14 @@ find_package(catkin REQUIRED
 ## Declare ROS messages, services and actions ##
 ################################################
 
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependencies might have been
-##     pulled in transitively but can be declared for certainty nonetheless:
-##     * add a build_depend tag for "message_generation"
-##     * add a run_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  Frontier.msg
   Crossing.msg
+  DescriptorLink.msg
+  Frontier.msg
+  LamaObject.msg
   PlaceProfile.msg
 )
 
@@ -57,6 +39,10 @@ add_service_files(
   FILES
   GetCrossing.srv
   SetCrossing.srv
+
+  GetLamaObject.srv
+  SetLamaObject.srv
+
   GetPlaceProfile.srv
   SetPlaceProfile.srv
 )
@@ -72,7 +58,6 @@ add_service_files(
 generate_messages(
   DEPENDENCIES
   geometry_msgs
-  lama_interfaces
 )
 
 ###################################
@@ -87,7 +72,7 @@ generate_messages(
 catkin_package(
   # INCLUDE_DIRS include
   # LIBRARIES
-  CATKIN_DEPENDS geometry_msgs lama_interfaces message_runtime
+  CATKIN_DEPENDS geometry_msgs message_runtime
   #  DEPENDS system_lib
 )
 
