--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_msgs
-	base = 5181d51
-	trimbase = 
+	base = 264a0ac
+	trimbase = 5181d51
 	parent = upstream
 	previous = 58e3867
