--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = c2b9938
-	trimbase = 
+	base = 851d61c
+	trimbase = c2b9938
 	parent = upstream
 	previous = 58e3867
