--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = 871f94f
-	trimbase = 
+	base = 225376c
+	trimbase = 871f94f
 	parent = upstream
 	previous = 58e3867
