--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jockeys
-	base = 4c2032e
-	trimbase = 
+	base = 092e55a
+	trimbase = 4c2032e
 	parent = upstream
 	previous = 58e3867
