--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,15 @@ project(lama_interfaces)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED
   COMPONENTS
-  roscpp
-  rospy
-  message_generation
   geometry_msgs
-  sensor_msgs
+  lama_msgs
+  message_generation
   nav_msgs
+  rospy
+  sensor_msgs
   )
 
+  find_package(roscpp REQUIRED)
 ## System dependencies are found with CMake's conventions
 #find_package(PkgConfig)
 #pkg_check_modules(SQLITE REQUIRED sqlite3)
@@ -27,40 +28,16 @@ catkin_python_setup()
 ## Declare ROS messages, services and actions ##
 ################################################
 
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependencies might have been
-##     pulled in transitively but can be declared for certainty nonetheless:
-##     * add a build_depend tag for "message_generation"
-##     * add a run_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  DescriptorLink.msg
-  LamaObject.msg
-  )
+# add_message_files(
+#   FILES
+#   )
 
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
   AddInterface.srv
   ActOnMap.srv
-  GetLamaObject.srv
-  SetLamaObject.srv
   GetPolygon.srv
   SetPolygon.srv
   GetDouble.srv
@@ -87,6 +64,7 @@ generate_messages(
   DEPENDENCIES
   actionlib_msgs
   geometry_msgs
+  lama_msgs
   sensor_msgs
   nav_msgs
   )
@@ -103,8 +81,18 @@ generate_messages(
 catkin_package(
   #INCLUDE_DIRS include
   #LIBRARIES
-  CATKIN_DEPENDS rospy geometry_msgs sensor_msgs nav_msgs
-  DEPENDS python-sqlalchemy python-nose
+
+  CATKIN_DEPENDS
+  geometry_msgs
+  lama_msgs
+  message_runtime
+  nav_msgs
+  rospy
+  sensor_msgs
+
+  DEPENDS
+  python-sqlalchemy
+  python-nose
   )
 
 ###########
@@ -114,9 +102,9 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 # include_directories(include)
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-  )
+# include_directories(
+#   ${catkin_INCLUDE_DIRS}
+#   )
 
 ## Declare a cpp library
 #add_library(lama_core src/lama_core.cpp)
@@ -141,10 +129,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+catkin_install_python(PROGRAMS
+  scripts/map_node
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS lama_interfaces lama_interfaces_node
@@ -161,11 +149,10 @@ include_directories(
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+install(FILES
+  launch/init_lama.launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
 
 #############
 ## Testing ##
@@ -173,11 +160,16 @@ include_directories(
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
+  find_package(roscpp REQUIRED)
 
+  include_directories(
+    ${catkin_INCLUDE_DIRS}
+    ${roscpp_INCLUDE_DIRS}
+    )
   ## Add gtest based cpp test target and link libraries
   add_rostest_gtest(${PROJECT_NAME}-test test/test_interfaces_roscpp.test test/utest.cpp)
   if(TARGET ${PROJECT_NAME}-test)
-    target_link_libraries(${PROJECT_NAME}-test ${catkin_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME}-test ${catkin_LIBRARIES} ${roscpp_LIBRARIES})
   endif()
 
   ## Add folders to be run by python nosetests
