--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_msgs
-	base = e3ed017
-	trimbase = 
+	base = e6e4d84
+	trimbase = e3ed017
 	parent = upstream
 	previous = 58e3867
