--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = d2ecc21
-	trimbase = 
+	base = 55f5589
+	trimbase = d2ecc21
 	parent = upstream
 	previous = 58e3867
