--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jockeys
-	base = 5917384
-	trimbase = 
+	base = a13f6e9
+	trimbase = 5917384
 	parent = upstream
 	previous = 58e3867
