--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = 85a8824
-	trimbase = 
+	base = 9031c05
+	trimbase = 85a8824
 	parent = upstream
 	previous = 58e3867
