--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_msgs
-	base = b0c57b7
-	trimbase = 
+	base = 6d4b9ad
+	trimbase = b0c57b7
 	parent = upstream
 	previous = 58e3867
