--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = e793a6f
-	trimbase = 
+	base = 4fde09a
+	trimbase = e793a6f
 	parent = upstream
 	previous = 58e3867
