--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = db9ff4c
-	trimbase = 
+	base = 618e05b
+	trimbase = db9ff4c
 	parent = upstream
 	previous = 58e3867
