--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jockeys
-	base = 8a9c8e0
-	trimbase = 
+	base = 3a4d859
+	trimbase = 8a9c8e0
 	parent = upstream
 	previous = 58e3867
