--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = f6e43c6
-	trimbase = 
+	base = b5ff594
+	trimbase = f6e43c6
 	parent = upstream
 	previous = 58e3867
