--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jockeys
-	base = 27f920d
-	trimbase = 
+	base = 1d00c8f
+	trimbase = 27f920d
 	parent = upstream
 	previous = 58e3867
