--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = 17129e2
-	trimbase = 
+	base = 81968dd
+	trimbase = 17129e2
 	parent = upstream
 	previous = 58e3867
