--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_msgs
-	base = f7dc1a8
-	trimbase = 
+	base = 92e124f
+	trimbase = f7dc1a8
 	parent = upstream
 	previous = 58e3867
