--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = 3f85b78
-	trimbase = 
+	base = 053a441
+	trimbase = 3f85b78
 	parent = upstream
 	previous = 58e3867
