--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jockeys
-	base = ce5fe59
-	trimbase = 
+	base = 3993145
+	trimbase = ce5fe59
 	parent = upstream
 	previous = 58e3867
