--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = 254b8cb
-	trimbase = 
+	base = a33b1a5
+	trimbase = 254b8cb
 	parent = upstream
 	previous = 58e3867
