--- a/interfaces/package.xml
+++ b/interfaces/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>lama_interfaces</name>
-  <version>0.1.1</version>
+  <version>0.1.3</version>
   <description>
 	  The lama_interfaces package provides the interfaces between ROS nodes
 	  (such as jockeys from lama_jockeys) and the map.
@@ -28,14 +28,16 @@
   <build_depend>lama_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>nav_msgs</build_depend>
-  <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
 
+  <run_depend>genpy</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>lama_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>python-sqlalchemy</run_depend>
+  <run_depend>roslib</run_depend>
+  <run_depend>python-rospkg</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
 
