--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_msgs
-	base = 9e13089
-	trimbase = 
+	base = 35a6f22
+	trimbase = 9e13089
 	parent = upstream
 	previous = 389dbb3
