--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = interfaces
-	base = d5f0087
-	trimbase = 
+	base = 7375283
+	trimbase = d5f0087
 	parent = upstream
 	previous = 389dbb3
