--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jockeys
-	base = a337444
-	trimbase = 
+	base = cb66380
+	trimbase = a337444
 	parent = upstream
 	previous = 389dbb3
