--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = lama_core
-	base = 691a409
-	trimbase = 
+	base = f22a46a
+	trimbase = 691a409
 	parent = upstream
 	previous = 389dbb3
